--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "models/vaw2vec"]
-	path = models/vaw2vec
+[submodule "models/wav2vec"]
+	path = models/wav2vec
 	url = https://github.com/TakHemlata/SSL_Anti-spoofing.git
