Changing connecotr adres to docker internal

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 WAV2VEC_CONFIG = 'config_files/config_wav2vec.yaml'
 MESONET_CONFIG = 'config_files/config_mesonet.yaml'
 AUDIO_STORAGE = 'storage'
-CONNECTOR_ADDRESS = '127.0.0.1'
+CONNECTOR_ADDRESS = 'host.docker.internal'
 CONNECTOR_PORT = '9090'
 AUDIO_DATASETS = 'datasets'
 RESULTS_CSV = 'results_csv'
