--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 WAV2VEC_CONFIG = 'config_files/config_wav2vec.yaml'
 MESONET_CONFIG = 'config_files/config_mesonet.yaml'
 AUDIO_STORAGE = 'storage'
-WAV2VEC_EXPERIMENTAL_THRESHOLD = '-3.2698796'
-CONNECTOR_ADDRESS = '0.0.0.0'
-CONNECTOR_PORT = '8000'
+CONNECTOR_ADDRESS = 'host.docker.internal'
+CONNECTOR_PORT = '9090'
 AUDIO_DATASETS = 'datasets'
 RESULTS_CSV = 'results_csv'
 CONFIG_FOLDER = 'config_files'
+WAV2VEC_EXPERIMENTAL_THRESHOLD = '-3.2698796'
