new results and bug fix with not existing files

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ AUDIO_DATASETS = 'datasets'
 RESULTS_CSV = 'results_csv'
 CONFIG_FOLDER = 'config_files'
 WAV2VEC_EXPERIMENTAL_THRESHOLD = '-3.2698796'
+AVAILABLE_DATASETS="deep_voice,fake_audio,my_eng,my_pol,in_the_wild,test_dataset,example,fake-real-audio"
+AVAILABLE_CONFIGS="config_mesonet.yaml,config_mesonet_finetuned.yaml,config_mesonet_ft_asp.yaml,config_wav2vec.yaml"
